--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.linkHover:hover {
+    color: blue;
+    text-decoration: underline;
+}
